cambios en el aula

--- a/pages/spot.html
+++ b/pages/spot.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
+        <title>Spots donación de sangre</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -47,7 +47,56 @@
 
         <!-- Portfolio-->
         <section class=" bg-primary pt-5 pb-4"  id="proyectos">
-      
+            <div class="row justify-content-around">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Spot 1</h5>
+                      <p class="card-text">Brenda Y Lucia</p>
+                      <a href="https://soundcloud.com/ayelen-campot/whatsapp-audio-2022-10-19-at-170047-1?si=0bcfdc174fe148f5a89b84bf7d591a03&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Spot 2</h5>
+                      <p class="card-text">Brenda Y Lucia</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Spot </h5>
+                      <p class="card-text">Rocío y Agustín</p>
+                      <a href="https://soundcloud.com/ayelen-campot/bad-bunny-day?si=9d89aeebcd74490d83deec377161eadd&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Spot </h5>
+                      <p class="card-text">Kevin y Lautaro</p>
+                      <a href="https://soundcloud.com/ayelen-campot/bad-bunny-day?si=9d89aeebcd74490d83deec377161eadd&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Spot </h5>
+                      <p class="card-text">Melody, Lucía y Sofía</p>
+                      <a href="https://soundcloud.com/ayelen-campot/bad-bunny-day?si=9d89aeebcd74490d83deec377161eadd&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Spot </h5>
+                      <p class="card-text">Jonathan y Ramiro</p>
+                      <a href="https://soundcloud.com/ayelen-campot/bad-bunny-day?si=9d89aeebcd74490d83deec377161eadd&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
         </section>
         
 
