--- a/pages/spot.html
+++ b/pages/spot.html
@@ -21,17 +21,18 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="../index.html">Los de comu de la 53</a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div cl class="navbar-nav ms-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#about">Objetivos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Nuestra mirada</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#proyectos">Proyectos</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+          <div class="container px-4 px-lg-5">
+              <a class="navbar-brand" href="../index.html">Los de comu de la 53</a>
+              <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+              <div class="collapse navbar-collapse" id="navbarResponsive">
+                  <ul class="navbar-nav ms-auto my-2 my-lg-0">
+                      <li class="nav-item"><a class="nav-link" href="#about">Objetivos</a></li>
+                      <li class="nav-item"><a class="nav-link" href="#services">Nuestra mirada</a></li>
+                      <li class="nav-item"><a class="nav-link" href="#proyectos">Proyectos</a></li>
+                  </ul>
+              </div>
+          </div>
+      </nav>
         <!-- Masthead-->
         <header class="fondo">
             <div class="container px-4 px-lg-5 h-100">
@@ -49,53 +50,57 @@
         <section class=" bg-primary pt-5 pb-4"  id="proyectos">
             <div class="row justify-content-around">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="../assets/img/spot/spot1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Spot 1</h5>
-                      <p class="card-text">Brenda Y Lucia</p>
-                      <a href="https://soundcloud.com/ayelen-campot/whatsapp-audio-2022-10-19-at-170047-1?si=0bcfdc174fe148f5a89b84bf7d591a03&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="btn btn-primary">Go somewhere</a>
+                      <p class="card-text">Victoria y Camila</p>
+                      <a href="https://soundcloud.com/ayelen-campot/whatsapp-audio-2022-11-02-at-174304?si=a84c4956529943d099cf6e8b7ba2ed0a&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"  class="btn btn-primary">Escuchar</a>
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="../assets/img/spot/spot2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Spot 2</h5>
                       <p class="card-text">Brenda Y Lucia</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="https://soundcloud.com/ayelen-campot/whatsapp-audio-2022-11-02-at-174303?si=b8591acb78174c849fa1391dddbe5f15&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"  class="btn btn-primary">Escuchar</a>
+                      <a href="https://soundcloud.com/ayelen-campot/whatsapp-audio-2022-11-02-at-174034?si=29d65a59ef1c40518bf86d3be717ea8c&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"  class="btn btn-primary">Escuchar</a>
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="../assets/img/spot/spot3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Spot </h5>
+                      <h5 class="card-title">Spot 3 </h5>
                       <p class="card-text">Rocío y Agustín</p>
-                      <a href="https://soundcloud.com/ayelen-campot/bad-bunny-day?si=9d89aeebcd74490d83deec377161eadd&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="btn btn-primary">Go somewhere</a>
+                      <a href="https://soundcloud.com/ayelen-campot/spots-de-sangre?si=a69c398ecf1f45849da43e965aa56d3e&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"  class="btn btn-primary">Escuchar</a>
                     </div>
                   </div>
-                  <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Spot </h5>
-                      <p class="card-text">Kevin y Lautaro</p>
-                      <a href="https://soundcloud.com/ayelen-campot/bad-bunny-day?si=9d89aeebcd74490d83deec377161eadd&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-                  <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Spot </h5>
-                      <p class="card-text">Melody, Lucía y Sofía</p>
-                      <a href="https://soundcloud.com/ayelen-campot/bad-bunny-day?si=9d89aeebcd74490d83deec377161eadd&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-                  <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Spot </h5>
-                      <p class="card-text">Jonathan y Ramiro</p>
-                      <a href="https://soundcloud.com/ayelen-campot/bad-bunny-day?si=9d89aeebcd74490d83deec377161eadd&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
+          
+            </div>
+            <div class="row justify-content-around mt-3">
+              <div class="card" style="width: 18rem;">
+                <img src="../assets/img/spot/spot4.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Spot 4 </h5>
+                  <p class="card-text">Kevin y Lautaro</p>
+                  <a href="https://soundcloud.com/ayelen-campot/whatsapp-audio-2022-11-02-at-174303?si=396d032a8d1a40b6b3143e01a05f0357&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"  class="btn btn-primary">Escuchar</a>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem;">
+                <img src="../assets/img/spot/spot5.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Spot 5 </h5>
+                  <p class="card-text">Lucía y Sofía</p>
+                  <a href="https://soundcloud.com/ayelen-campot/whatsapp-audio-2022-11-07-at-131314?si=e7bd7921145f453f844e281d86141610&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank" class="btn btn-primary">Escuchar</a>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem;">
+                <img src="../assets/img/spot/spot6.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Spot 6 </h5>
+                  <p class="card-text">Jonathan y Ramiro</p>
+                  <a href="https://soundcloud.com/ayelen-campot/jho?si=7724b60abce641fd8f238eeb41568f23&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank" class="btn btn-primary">Escuchar</a>
+                </div>
+              </div>
             </div>
         </section>
         
@@ -109,7 +114,7 @@
         <!-- SimpleLightbox plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="../js/scripts.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
