--- a/pages/consumo.html
+++ b/pages/consumo.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Storytelling</title>
+        <title>Consumo</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -38,7 +38,7 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">Storytelling</h1>
+                        <h1 class="text-white font-weight-bold">Comunicación y culturas del consumo</h1>
                         <hr class="divider" />
                     </div>
                 </div>
@@ -48,10 +48,18 @@
 
         <!-- Portfolio-->
         <section class=" bg-primary pt-5 p-5 justify-content-center"  id="proyectos">
-            <h3 class="mt-3 mb-3 text-white">Storytelling: Migraciones - Rocío</h3>
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/VUKWeC51o5A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h3 class="mt-3 mb-3 text-white">Storytelling: Migraciones - Lucía y Brenda</h3>
-            <div style="width: 100%;"><div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe title="Diario Storyteling" frameborder="0" width="1200px" height="675px" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://view.genial.ly/633447f931f1ae0018a94607" type="text/html" allowscriptaccess="always" allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div> </div>
+            <h3 class="mt-3 mb-3 text-white">Nicole Moreno</h3>
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/fkM2n5rwHwQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h3 class="mt-3 mb-3 text-white">Rodrigo Aguilar</h3>
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/fkM2n5rwHwQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h3 class="mt-3 mb-3 text-white">Lucas Carrizo</h3>
+            <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Comunicación y culturas del consumo</h5>
+                  <p class="card-text">¿Qué son los medios de comunicación?</p>
+                  <a href="../assets/img/quinto/consumo.pdf" target="_blank" class="btn btn-primary">Ver trabajo</a>
+                </div>
+              </div>
         </section>
         
 
