--- a/pages/historiafotos.html
+++ b/pages/historiafotos.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
+        <title>Lenguaje gráfico</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -24,7 +24,8 @@
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="../index.html">Los de comu de la 53</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div cl class="navbar-nav ms-auto my-2 my-lg-0">
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#about">Objetivos</a></li>
                         <li class="nav-item"><a class="nav-link" href="#services">Nuestra mirada</a></li>
                         <li class="nav-item"><a class="nav-link" href="#proyectos">Proyectos</a></li>
@@ -37,7 +38,7 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">videos</h1>
+                        <h1 class="text-white font-weight-bold">Lenguaje gráfico - Historia en fotos</h1>
                         <hr class="divider" />
                     </div>
                 </div>
@@ -46,8 +47,13 @@
         <!-- About-->
 
         <!-- Portfolio-->
-        <section class=" bg-primary pt-5 pb-4"  id="proyectos">
-      
+        <section class=" bg-primary pt-5 p-5 justify-content-center"  id="proyectos">
+            <h3 class="mt-3 mb-3 text-white">Rocío - Contando una historia en fotos</h3>
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/nbAoyd2xotY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h3 class="mt-3 mb-3 text-white">Victoria - Contando una historia en fotos</h3>
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/vHRjwZEfwNg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h3 class="mt-3 mb-3 text-white">Lucía y Brenda - Contando una historia en fotos</h3>
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSWgxJ7ufkV69LejTDESohlmxyO6-v1Tekh8yhVv9xxymbo7YSrVT9JybVAvHRSPg/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="407" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         </section>
         
 
@@ -60,7 +66,7 @@
         <!-- SimpleLightbox plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="../js/scripts.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
