--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </div>
             
         </div>
-        <div id="portfolio">
+        <div id="portfolio" class="mb-3">
             <div class="container-fluid p-0">
                 <h2 class="h2 text-center text-black mt-3 mb-3">5to 2da - Ciclo lectivo 2022</h2>
                 <div class="row g-0">
@@ -186,7 +186,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="pages/spot.html" title="Project Name">
+                        <a class="portfolio-box" href="pages/observatorio.html" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/observatorio.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Obsevatorio de Medios</div>
