--- a/pages/mapeos.html
+++ b/pages/mapeos.html
@@ -47,6 +47,55 @@
 
         <!-- Portfolio-->
         <section class=" bg-primary pt-5 pb-4"  id="proyectos">
+            <h3 class="mt-3 mb-3 text-white text-center">Informe de mapeos barriales </h3>
+            <h5 class="mt-3 mb-3 text-white text-center">Taller de comunicación institucional y comuniarias<</h5>
+            <div class="accordion accordion-flush p-5" id="accordionFlushExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                      Brenda y Lucía
+                    </button>
+                  </h2>
+                  <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Zona elegida y las problemáticas:
+                        <a href="https://docs.google.com/document/d/1vgp91fiWgq2I0TLaBZ0_KJR4XAuE2-oC/edit"> Link al informe</a>
+                        </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                      Rocío y Agustín
+                    </button>
+                  </h2>
+                  <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+
+                    <div class="accordion-body"><iframe width="100%" height="315" src="https://www.youtube.com/embed/leBh731r7Uw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                    <a class="m-5 mt-5" href="https://docs.google.com/document/d/1-s6cQ2Cu4rz_be2E27LEEwuLO9IDwq_g/edit?usp=drive_web&ouid=110840851475603186278&rtpof=true"> Link al informe</a>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                      Lucía, Sofía y Melody
+                      </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                      <div class="accordion-body"> <a href="https://docs.google.com/document/d/1B2qj9RQqzyLy389V0P7JW4LxDwNP9F1U/edit"> Link al informe</a></div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingFour">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                       Camila y Victoria
+                      </button>
+                    </h2>
+                    <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-collapseFour" data-bs-parent="#accordionFlushExample">
+                      <div class="accordion-body"> <a href="https://docs.google.com/document/d/1nOQgywLLZpYwIvznUy1iLt_OTmzTz20_/edit"> Link al informe</a></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
       
         </section>
         
@@ -60,7 +109,7 @@
         <!-- SimpleLightbox plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="../js/scripts.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
