--- a/pages/spot.html
+++ b/pages/spot.html
@@ -60,7 +60,7 @@
                   <div class="card" style="width: 18rem;">
                     <img src="../assets/img/spot/spot2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Spot 2</h5>
+                      <h5 class="card-title">Spot 2 y 3</h5>
                       <p class="card-text">Brenda Y Lucia</p>
                       <a href="https://soundcloud.com/ayelen-campot/whatsapp-audio-2022-11-02-at-174303?si=b8591acb78174c849fa1391dddbe5f15&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"  class="btn btn-primary">Escuchar</a>
                       <a href="https://soundcloud.com/ayelen-campot/whatsapp-audio-2022-11-02-at-174034?si=29d65a59ef1c40518bf86d3be717ea8c&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"  class="btn btn-primary">Escuchar</a>
@@ -69,7 +69,7 @@
                   <div class="card" style="width: 18rem;">
                     <img src="../assets/img/spot/spot3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Spot 3 </h5>
+                      <h5 class="card-title">Spot 4 </h5>
                       <p class="card-text">Rocío y Agustín</p>
                       <a href="https://soundcloud.com/ayelen-campot/spots-de-sangre?si=a69c398ecf1f45849da43e965aa56d3e&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"  class="btn btn-primary">Escuchar</a>
                     </div>
@@ -80,7 +80,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="../assets/img/spot/spot4.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Spot 4 </h5>
+                  <h5 class="card-title">Spot 5 </h5>
                   <p class="card-text">Kevin y Lautaro</p>
                   <a href="https://soundcloud.com/ayelen-campot/whatsapp-audio-2022-11-02-at-174303?si=396d032a8d1a40b6b3143e01a05f0357&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"  class="btn btn-primary">Escuchar</a>
                 </div>
@@ -88,7 +88,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="../assets/img/spot/spot5.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Spot 5 </h5>
+                  <h5 class="card-title">Spot 6 </h5>
                   <p class="card-text">Lucía y Sofía</p>
                   <a href="https://soundcloud.com/ayelen-campot/whatsapp-audio-2022-11-07-at-131314?si=e7bd7921145f453f844e281d86141610&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank" class="btn btn-primary">Escuchar</a>
                 </div>
@@ -96,7 +96,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="../assets/img/spot/spot6.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Spot 6 </h5>
+                  <h5 class="card-title">Spot 7 </h5>
                   <p class="card-text">Jonathan y Ramiro</p>
                   <a href="https://soundcloud.com/ayelen-campot/jho?si=7724b60abce641fd8f238eeb41568f23&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank" class="btn btn-primary">Escuchar</a>
                 </div>
