saco enlaces que no son del index

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <section class="page-section bg-dark text-white">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">¡Visitá el Instagram de nuestra escuela!</h2>
-                <a class="btn btn-light btn-xl" href="https://www.instagram.com/secu53palomar/" target="_blank">Instagram</a>
+                <a class="" href="https://www.instagram.com/secu53palomar/" target="_blank"><i class="bi bi-instagram fs-2 mx-3"></i></a>
             </div>
         </section>
         <!-- Contact-->
