--- a/pages/mapeos.html
+++ b/pages/mapeos.html
@@ -23,13 +23,6 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="../index.html">Los de comu de la 53</a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div cl class="navbar-nav ms-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#about">Objetivos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Nuestra mirada</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#proyectos">Proyectos</a></li>
-                    </ul>
-                </div>
             </div>
         </nav>
         <!-- Masthead-->
@@ -48,7 +41,7 @@
         <!-- Portfolio-->
         <section class=" bg-primary pt-5 pb-4"  id="proyectos">
             <h3 class="mt-3 mb-3 text-white text-center">Informe de mapeos barriales </h3>
-            <h5 class="mt-3 mb-3 text-white text-center">Taller de comunicación institucional y comuniarias<</h5>
+            <h5 class="mt-3 mb-3 text-white text-center">Taller de comunicación institucional y comuniarias</h5>
             <div class="accordion accordion-flush p-5" id="accordionFlushExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingOne">
@@ -57,7 +50,7 @@
                     </button>
                   </h2>
                   <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Zona elegida y las problemáticas:
+                    <div class="accordion-body">
                         <a href="https://docs.google.com/document/d/1vgp91fiWgq2I0TLaBZ0_KJR4XAuE2-oC/edit"> Link al informe</a>
                         </div>
                   </div>
