--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div id="portfolio" class="mb-3">
             <div class="container-fluid p-0">
                 <h2 class="h2 text-center text-black mt-3 mb-3">5to 2da - Ciclo lectivo 2022</h2>
-                <div class="row g-0">
+                <div class="row g-0 justify-content-center">
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="pages/consumo.html" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/consumo.jpg" alt="..." />
