--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/mapeos.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50">informes de mapeos</div>
-                                <div class="project-name">mapeos</div>
+                                <div class="project-name">Mapeos</div>
                             </div>
                         </a>
                     </div>
