cambio texto index

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Nuestra visión</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">Trabajar la comunicación desde diferentes aspectos con el objetivo de que los alumnos tengan una visión crítica de la realidad, y a su vez tengan las herramientas digitales, creativas y acadmémicas para el mundo adulto.</p>
+                        <p class="text-white-75 mb-4">Trabajar la comunicación desde diferentes aspectos con el objetivo que los alumnos tengan una visión crítica de la realidad, y a su vez tengan las herramientas digitales, creativas y acadmémicas para el mundo adulto.</p>
                         <a class="btn btn-light btn-xl" href="#services">Nuestra mirada</a>
                     </div>
                 </div>
