cambio clases en el index

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
         </section>
         <!-- Portfolio-->
-        <section class=" bg-primary pt-5 pb-4"  id="proyectos">
+        <section class=" bg-primary pt-5 pb-4 mb-3"  id="proyectos">
             <div class="container ">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
@@ -171,7 +171,7 @@
                 </div>
             </div>
         </div>
-        <section class=" bg-primary pt-5 pb-4 mt-3"  id="proyectos">
+        <section class=" bg-primary pt-5 pb-4 mt-3 mb-3"  id="proyectos">
             <div class="container ">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
